# vec3

./: .clang-format  .cmake-format.json  .cmake-format.yaml  .gitattributes  .pre-commit-config.yaml  LICENSE  environment.yml
.circleci/: config.yml
libvec3/: CMakeLists.txt  CMakePresets.json
libvec3/cmake/: vec3Config.cmake.in
libvec3/src/: CMakeLists.txt
libvec3/src/vec3/: vec3.hpp
libvec3/test/: CMakeLists.txt  vec3_test.cpp
